# leanstaking

./: .gitignore  Cargo.toml  README.md
docs/: eip.md
py/: commit.py  hash.py  stake.py
py/utils/: hash.py  merkle.py
src/: main.rs
src/data/: mod.rs
